--- a/002/com.hajunho.swift-graph/jhdata/testdata.plist
+++ b/002/com.hajunho.swift-graph/jhdata/testdata.plist
@@ -4,6 +4,122 @@
 <array>
 	<array>
 		<date>2018-10-15T07:55:17Z</date>
+		<integer>500</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>470</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>200</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>100</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
+		<integer>740</integer>
+	</array>
+	<array>
+		<date>2018-10-15T07:55:17Z</date>
 		<integer>3220</integer>
 	</array>
 	<array>
