--- a/002/Podfile
+++ b/002/Podfile
@@ -1,4 +1,4 @@
-# Uncomment the next line to define a global platform for your project
+	# Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
 target 'com.hajunho.swift-graph' do
@@ -7,6 +7,8 @@ target 'com.hajunho.swift-graph' do
 
   # Pods for com.hajunho.swift-graph
   pod 'SnapKit', '~> 4.0.0'
+  pod 'SwiftyJSON', '~> 4.0'
+  pod 'Alamofire', '~> 4.7'
 
   target 'com.hajunho.swift-graphTests' do
     inherit! :search_paths
