--- a/WEB/react/react-first/package.json
+++ b/WEB/react/react-first/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-function-sent": "^7.18.6",
+    "@babel/plugin-proposal-throw-expressions": "^7.18.6",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
