--- a/WEB/react/react-first/package.json
+++ b/WEB/react/react-first/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-function-sent": "^7.18.6",
     "@babel/plugin-proposal-throw-expressions": "^7.18.6",
     "@babel/preset-env": "^7.19.3",
