--- a/WEB/homework/parceldelivery2/build.gradle
+++ b/WEB/homework/parceldelivery2/build.gradle
@@ -19,12 +19,11 @@ repositories {
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
