--- a/WEB/homework/parceldelivery2/src/main/resources/application.properties
+++ b/WEB/homework/parceldelivery2/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=8070
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=93645789
-spring.datasource.url=jdbc:mysql://localhost:3306/board
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parcel
