--- a/WEB/homework/parceldelivery2/src/main/resources/application.properties
+++ b/WEB/homework/parceldelivery2/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=93645789
+#spring.datasource.password=93645789
+spring.datasource.password=siso@123
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/parcel
