--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ playground.xcworkspace
 *.bin
 *.class
 # End of https://www.gitignore.io/api/swift,xcode,cocoapods,objective-c
+
+WEB/react/react-fifth/node_modules
