--- a/C++python/CMakeLists.txt
+++ b/C++python/CMakeLists.txt
@@ -3,4 +3,6 @@ project(C__python)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(C__python main.cpp)
+add_executable(C__python
+        Linspace.cpp
+        Linspace.h)
